fix: merge with development fix: Templates > Menu: FireFox, touch devices visibility issues

--- a/styles/project/components/_misc.scss
+++ b/styles/project/components/_misc.scss
@@ -7,29 +7,9 @@
 }
 
 .drag-drop-icon {
-<<<<<<< HEAD
-  background-image: url('/assets/img/grippy_large.png');
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-=======
   background: url(/assets/img/grippy_large.png) no-repeat;
->>>>>>> 4adaf852f9795adad1970eb3861d73790075ff15
   position: absolute;
   top: 0;
-<<<<<<< HEAD
-  bottom: 0;
-  height: 20px;
-  width: 4px;
-}
-
-.drag-drop-group {
-  min-height: 10px;
-
-  &.mod-lg {
-    min-height: 40px;
-=======
-
   $drag-drop-size: 1.1;
   // google drag-drop size at compact interface
   background-size: 5px * $drag-drop-size 5px*6 * $drag-drop-size;
@@ -47,7 +27,14 @@
 
   drag-drop.mod-low & {
     top: 6.5px;
->>>>>>> 4adaf852f9795adad1970eb3861d73790075ff15
+  }
+}
+
+.drag-drop-group {
+  min-height: 10px;
+
+  &.mod-lg {
+    min-height: 40px;
   }
 }
 
